resolved reqs